[gd_scene load_steps=6 format=3 uid="uid://dmd4syhpkdst5"]

[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://assets/icon.svg" id="1_0sgnj"]
[ext_resource type="Script" uid="uid://in1syok083pr" path="res://scenes/utilities/enemy.gd" id="1_7iqul"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7iqul"]
albedo_texture = ExtResource("1_0sgnj")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_srnsx"]
material = SubResource("StandardMaterial3D_7iqul")
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0sgnj"]
radius = 0.23046875
height = 1.0546875

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_7iqul")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45107192, 0)
mesh = SubResource("CapsuleMesh_srnsx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.47265625, 0)
shape = SubResource("CapsuleShape3D_0sgnj")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="link_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_link_reached"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
